detached ability system from transfur system, switched to neoforge attachment sync for transfur handler & abilities, fixed creepers not being afraid of cats, int model properties can now be added and modified